--- a/mda-report.html
+++ b/mda-report.html
@@ -3,18 +3,23 @@
 <!-- Bootstrap stylesheet and scripts -->
 <link
   rel="stylesheet"
-  href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-  integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+  href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+  integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
   crossorigin="anonymous"
 />
+<!-- <script
+  src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+  integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+  crossorigin="anonymous"
+></script> -->
 <script
-  src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-  integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+  src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+  integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
   crossorigin="anonymous"
 ></script>
 <script
-  src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-  integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+  src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+  integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
   crossorigin="anonymous"
 ></script>
 
@@ -1789,9 +1794,7 @@
 
     // Parse out input values
     const eles = document.querySelector("#filterForm").elements;
-    const checkboxes = [...eles].filter(
-      (ele) => ele.type === "checkbox"
-    );
+    const checkboxes = [...eles].filter((ele) => ele.type === "checkbox");
 
     const periodCheckboxValues = checkboxes
       .filter((checkbox) => checkbox.name === "period")
@@ -1810,15 +1813,33 @@
       periodFilterString,
       periodPrettyString,
       orgUnitFilterString,
-      orgUnitPrettyString
+      orgUnitPrettyString,
     });
 
     // Update state
+    state = {
+      ...state,
+      period: periodFilterString,
+      orgUnit: orgUnitFilterString,
+    };
     // Load table
-    // Trigger loading state
-    // Query analytics, etc
-    // Update period/org unit in DOM
+    loadTableData();
     // Close dropdown
+    $(".dropdown-toggle").dropdown("toggle");
+  }
+
+  function loadTableData() {
+    // Prepare for new table data & show loading
+    $("#tbody").empty();
+    $("#loading").show();
+    // TODO: disable CSV download
+
+    // Query new data and populate table
+    return getAnalyticsData()
+      .then(populateCellValues)
+      .then(populateHtmlTableBodyWithValues);
+    // TODO: Enable CSV download
+    // TODO: update period and org unit display
   }
 
   function setUpCheckboxForm({ startingYear, maxOrgUnitLevel }) {
@@ -1875,7 +1896,7 @@
     </select>
   </div>
 
-  <div class="dropright">
+  <div class="dropdown dropright">
     <button
       class="btn btn-secondary dropdown-toggle"
       type="button"
